# doc-gen-ai-workshop

./: .gitignore  README.md  pyproject.toml  requirements.txt
sample_files/template/: MovieScriptSummaryTemplate.docx
src/: ai_all_documents.py  ai_single_document.py  generate_all_documents.py  generate_single_document.py  init.py  init.py.py  merge_all_documents.py  merge_single_document.py
src/api/: __init__.py  ai.py  doc_gen.py  doc_gen_data_classes.py  file_folder.py
src/client/: __init__.py  box_api_client.py
tests/: conftest.py  test_box_api_ai.py  test_box_api_connection.py  test_box_api_data_classes.py  test_box_api_doc_gen.py  test_box_api_file_folder.py
